# qt_gui_core

./: .gitignore  CONTRIBUTING.md  LICENSE  stack.xml
.github/workflows/: mirror-rolling-to-main.yaml
qt_dotgraph/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
qt_dotgraph/qt_dotgraph/: dot_shapes.py  dot_to_qt.py  pydotfactory.py
qt_dotgraph/src/qt_dotgraph/: colors.py  dot_shapes.py  dot_to_qt.py  edge_item.py  graph_item.py  node_item.py  pydotfactory.py  pygraphvizfactory.py
qt_dotgraph/test/: dot_to_qt_test.py  pydot_factory_test.py  pygraphviz_factory_test.py  test_copyright.py  test_flake8.py  test_pep257.py  test_xmllint.py
qt_gui/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
qt_gui/qt_gui/: about_handler.py  dock_widget.py  dock_widget_container.py  errors.py  help_provider.py  main.py  main_window.py  perspective_manager.py  plugin_context.py  plugin_handler_xembed.py  plugin_handler_xembed_client.py  plugin_handler_xembed_container.py  plugin_instance_id.py  plugin_manager.py  plugin_menu.py  plugin_provider.py  recursive_plugin_provider.py  ros_package_helper.py
qt_gui/resource/: container_title_bar.ui  dock_widget_title_bar.ui  rename_container.ui
qt_gui/src/qt_gui/: about_handler.py  application_context.py  application_dbus_interface.py  composite_plugin_provider.py  container_manager.py  container_title_bar.py  dock_widget.py  dock_widget_container.py  dock_widget_title_bar.py  dockable_main_window.py  errors.py  help_provider.py  icon_loader.py  main.py  main_window.py  menu_manager.py  minimized_dock_widgets_toolbar.py  perspective_manager.py  perspective_manager_dbus_interface.py  plugin.py  plugin_context.py  plugin_descriptor.py  plugin_handler.py  plugin_handler_container.py  plugin_handler_dbus_service.py  plugin_handler_direct.py  plugin_handler_xembed.py  plugin_handler_xembed_client.py  plugin_handler_xembed_container.py  plugin_instance_id.py  plugin_manager.py  plugin_manager_dbus_interface.py  plugin_menu.py  plugin_provider.py  qt_binding_helper.py  recursive_plugin_provider.py  reload_importer.py  reparent_event.py  ros_package_helper.py  settings.py  (+4 more)
qt_gui_app/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
qt_gui_app/scripts/: qt_gui_app
qt_gui_core/: CHANGELOG.rst  CMakeLists.txt  package.xml
qt_gui_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
qt_gui_cpp/cmake/: qt_gui_cpp-extras.cmake
qt_gui_cpp/include/qt_gui_cpp/: composite_plugin_provider.h  composite_plugin_provider.hpp  exports.h  generic_proxy.h  generic_proxy.hpp  plugin.h  plugin.hpp  plugin_bridge.h  plugin_bridge.hpp  plugin_context.h  plugin_context.hpp  plugin_descriptor.h  plugin_descriptor.hpp  plugin_provider.h  plugin_provider.hpp  recursive_plugin_provider.h  recursive_plugin_provider.hpp  ros_pluginlib_plugin_provider.h  ros_pluginlib_plugin_provider.hpp  ros_pluginlib_plugin_provider_for_plugin_providers.h  ros_pluginlib_plugin_provider_for_plugin_providers.hpp  ros_pluginlib_plugin_provider_for_plugins.h  ros_pluginlib_plugin_provider_for_plugins.hpp  settings.h  settings.hpp
qt_gui_cpp/qt_gui_cpp/: CMakeLists.txt  cpp_plugin_provider.py
qt_gui_cpp/src/: CMakeLists.txt
qt_gui_cpp/src/qt_gui_cpp/: CMakeLists.txt  composite_plugin_provider.cpp  cpp_binding_helper.py  cpp_plugin_provider.py  generic_proxy.cpp  plugin_bridge.cpp  plugin_context.cpp  plugin_descriptor.cpp  plugin_provider.cpp  recursive_plugin_provider.cpp  ros_pluginlib_plugin_provider.cpp  ros_pluginlib_plugin_provider.py  settings.cpp
qt_gui_cpp/src/qt_gui_cpp_shiboken/: CMakeLists.txt  global.h  typesystem.xml
qt_gui_cpp/src/qt_gui_cpp_sip/: CMakeLists.txt  composite_plugin_provider.sip  generic_proxy.sip  plugin.sip  plugin_bridge.sip  plugin_context.sip  plugin_descriptor.sip  plugin_provider.sip  qt_gui_cpp.sip  recursive_plugin_provider.sip  ros_pluginlib_plugin_provider_for_plugin_providers.sip  ros_pluginlib_plugin_provider_for_plugins.sip  settings.sip
qt_gui_cpp/test/: test_imports_shiboken.py  test_imports_sip.py
qt_gui_py_common/: CHANGELOG.rst  CMakeLists.txt  mainpage.dox  package.xml  setup.py
qt_gui_py_common/qt_gui_py_common/: checkbox_group.py  simple_settings_dialog.py  worker_thread.py
qt_gui_py_common/resource/: simple_settings_dialog.ui
qt_gui_py_common/src/qt_gui_py_common/: checkbox_group.py  console_text_edit.py  exclusive_options_group.py  simple_settings_dialog.py  worker_thread.py
