<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qt_gui</name>
  <version>0.4.2</version>
  <description>
    qt_gui provides the infrastructure for an integrated graphical user interface based on Qt.
    It is extensible with Python- and C++-based plugins (implemented in separate packages) which can contribute arbitrary widgets.
    It requires either PyQt or PySide bindings.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend>qt5-qmake</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 2">python-qt5-bindings</build_depend>
  <build_depend condition="$ROS_PYTHON_VERSION == 3">python3-qt5-bindings</build_depend>

  <exec_depend version_gte="0.3.0">python_qt_binding</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-rospkg</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-rospkg</exec_depend>
  <exec_depend>tango-icon-theme</exec_depend>
</package>
