<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qt_gui_app</name>
  <version>0.4.1</version>
  <description>
    qt_gui_app provides the main to start an instance of the integrated graphical user interface provided by qt_gui.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui_app</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_app</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_app/issues</url>
  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
</package>
