<package>
  <name>qt_gui_core</name>
  <version>0.2.3</version>
  <description>
    Integration of the ROS package system and ROS-specific plugins for a Qt-based GUI.
  </description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui_core</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Dirk Thomas</author>

  <run_depend>qt_dotgraph</run_depend>
  <run_depend>qt_gui</run_depend>
  <run_depend>qt_gui_app</run_depend>
  <run_depend>qt_gui_cpp</run_depend>
  <run_depend>qt_gui_py_common</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
