<package>
  <name>qt_gui_core</name>
  <version>2.6.0</version>
  <description>
    Integration of the ROS package system and ROS-specific plugins for a Qt-based GUI.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui_core</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <run_depend version_gte="0.3.0">qt_dotgraph</run_depend>
  <run_depend version_gte="0.3.0">qt_gui</run_depend>
  <run_depend version_gte="0.3.0">qt_gui_app</run_depend>
  <run_depend version_gte="0.3.0">qt_gui_cpp</run_depend>
  <run_depend version_gte="0.3.0">qt_gui_py_common</run_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
