<package>
  <name>qt_gui_cpp</name>
  <version>0.2.21</version>
  <description>
    qt_gui_cpp provides the foundation for C++-bindings for qt_gui and creates bindings for every generator available.
    At least one specific binding must be available in order to use C++-plugins.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui_cpp</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libqt4-dev</build_depend>
  <build_depend>pkg-config</build_depend>
  <build_depend version_gte="1.9.23">pluginlib</build_depend>
  <build_depend version_gte="0.2.11">python_qt_binding</build_depend>
  <build_depend>qt4-qmake</build_depend>
  <build_depend>tinyxml</build_depend>

  <run_depend version_gte="1.9.23">pluginlib</run_depend>
  <run_depend version_gte="0.2.18">qt_gui</run_depend>

  <export>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
