<package format="2">
  <name>qt_gui_cpp</name>
  <version>2.6.0</version>
  <description>
    qt_gui_cpp provides the foundation for C++-bindings for qt_gui and creates bindings for every generator available.
    At least one specific binding must be available in order to use C++-plugins.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui_cpp</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>pkg-config</build_depend>
  <build_depend version_gte="1.9.23">pluginlib</build_depend>
  <build_depend version_gte="0.3.0">python_qt_binding</build_depend>
  <build_depend>qt5-qmake</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rcpputils</build_depend>
  <build_depend>tinyxml2_vendor</build_depend>

  <exec_depend version_gte="1.9.23">pluginlib</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
  <exec_depend>rcpputils</exec_depend>
  <exec_depend>tinyxml2_vendor</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
