<package>
  <name>qt_gui_py_common</name>
  <version>0.2.32</version>
  <description>
    qt_gui_py_common provides common functionality for GUI plugins written in Python.
  </description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/qt_gui_py_common</url>
  <url type="repository">https://github.com/ros-visualization/qt_gui_core</url>
  <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python_qt_binding</run_depend>
  <run_depend>python-rospkg</run_depend>
</package>
